Add graphql api

--- a/amplify/backend/auth/concertticket08f3b569/concertticket08f3b569-cloudformation-template.yml
+++ b/amplify/backend/auth/concertticket08f3b569/concertticket08f3b569-cloudformation-template.yml
@@ -253,6 +253,7 @@ Resources:
       
       MfaConfiguration: !Ref mfaConfiguration
       SmsVerificationMessage: !Ref smsVerificationMessage
+      SmsAuthenticationMessage: !Ref smsAuthenticationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
         ExternalId: concer08f3b569_role_external_id
