--- a/amplify/backend/auth/concertticket08f3b569/concertticket08f3b569-cloudformation-template.yml
+++ b/amplify/backend/auth/concertticket08f3b569/concertticket08f3b569-cloudformation-template.yml
@@ -165,13 +165,26 @@ Parameters:
   authProviders:
     Type: CommaDelimitedList
       
+  hostedUIProviderCreds:
+    Type: String
+  
+            
+  
+  thirdPartyAuth:
+    Type: String
+            
+  
+  userPoolGroups:
+    Type: String
+            
+  
+  adminQueries:
+    Type: String
+            
   oAuthMetadata:
     Type: String
   
             
-  hostedUIProviderCreds:
-    Type: String
-  
             
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
