Update graphql schema

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -24,7 +24,7 @@
               "authenticationType": "API_KEY",
               "apiKeyConfig": {
                 "apiKeyExpirationDays": 365,
-                "description": "concertKey"
+                "description": "testKey"
               }
             }
           ]
@@ -34,6 +34,20 @@
   },
   "function": {
     "concertTicketPostConfirmation": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "concertticket",
+          "attributes": [
+            "GraphQLAPIIdOutput"
+          ]
+        }
+      ]
+    },
+    "acceptInvitation": {
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda",
