--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^3.3.25",
+    "date-fns": "^2.22.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
