create acceptConcertInvitation lambda and update graphql schema

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -74,6 +74,34 @@
           ]
         }
       ]
+    },
+    "acceptConcertInvitation": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "concertticket",
+          "attributes": [
+            "GraphQLAPIIdOutput"
+          ]
+        }
+      ]
+    },
+    "rejectConcertInvitation": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "concertticket",
+          "attributes": [
+            "GraphQLAPIIdOutput"
+          ]
+        }
+      ]
     }
   },
   "storage": {
