--- a/amplify/backend/auth/concertticket08f3b569/concertticket08f3b569-cloudformation-template.yml
+++ b/amplify/backend/auth/concertticket08f3b569/concertticket08f3b569-cloudformation-template.yml
@@ -177,6 +177,10 @@ Parameters:
   adminQueries:
     Type: String
             
+  
+  breakCircularDependency:
+    Type: String
+            
   hostedUIProviderCreds:
     Type: String
   
@@ -820,6 +824,9 @@ Outputs :
   UserPoolId:
     Value: !Ref 'UserPool'
     Description:  Id for the user pool
+  UserPoolArn:
+    Value: !GetAtt UserPool.Arn
+    Description:  Arn for the user pool
   UserPoolName:
     Value: !Ref userPoolName
   AppClientIDWeb:
